--- a/css/common.css
+++ b/css/common.css
@@ -1,12 +1,4 @@
 /* логотип */
-.logo {
-  color: var(--accent-color);
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.1;
-  font-style: normal;
-}
 
 /* site nav */
 .site-nav a {
@@ -55,14 +47,17 @@
   color: var(--primary-wight-color);
   font-size: 44px;
   line-height: 1.3;
+  text-align: center;
   text-transform: uppercase;
-  font-weight: 900px;
+  font-weight: 900;
+  letter-spacing: 0.06em;
   margin-bottom: 30px;
 }
 .description-titel {
   font-size: 14px;
   line-height: 1.1;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
 }
 .portfolio-titel {
   font-size: 18px;
@@ -71,15 +66,16 @@
 
 /* секция generel */
 .generel {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex;
+  flex-wrap: wrap;*/
   align-items: center;
   background-color: #2f303a;
   height: 600px;
+  padding: 200px 0px;
 }
 
 /* секция  description */
-.description-item {
+.description {
   padding-top: 94px;
 }
 .description-item p {
@@ -92,15 +88,15 @@
 }
 
 /* секция work */
+.work {
+  padding-top: 95px;
+  padding-bottom: 94px;
+}
 .work-item {
   margin-top: 50px;
-  padding-bottom: 94px;
 }
 .work-item:not(:last-child) {
   margin-right: 30px;
-}
-.work-titel {
-  padding-top: 94px;
 }
 
 /* секция team */
@@ -112,15 +108,16 @@
 .team-list:not(:last-child) {
   margin-right: 30px;
 }
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .team-our {
   display: flex;
 }
-.team-titel {
-  padding-top: 94px;
-}
+
 .team-list {
   margin-top: 50px;
-  padding-bottom: 94px;
 }
 .description-team {
   padding: 30px 68px;
@@ -132,6 +129,10 @@
   margin-bottom: 10px;
 }
 /*секции на страничке portfolio */
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .iist-button {
   display: flex;
   justify-content: center;
@@ -181,7 +182,7 @@
   background-color: var(--accent-color);
   color: var(--primary-wight-color);
   border-radius: 4px;
-  padding: 10px 32px;
+  padding: 6px 22px;
 }
 
 .button:hover,
@@ -204,9 +205,12 @@
   font-family: Roboto;
   font-weight: 500;
   font-style: normal;
+  letter-spacing: 0.02em;
+  line-height: 1.1;
 }
 .address {
   color: var(--primary-wight-color);
+  font-style: normal;
   margin-top: 20px;
 }
 .page-footer .addres {
