--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
 /* сброс стилей  */
 .list {
   list-style: none;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 0;
   display: flex;
 }
