--- a/css/common.css
+++ b/css/common.css
@@ -13,22 +13,23 @@
 }
 .main-nav {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   padding: 32px 0px;
 }
 .site-nav {
   display: flex;
   align-items: center;
   margin-left: 93px;
-  margin-right: 331px;
 }
+
 .site-nav li:not(:last-child) {
   margin-right: 50px;
 }
 .address-page {
   display: flex;
-  align-items: center;
+  margin-left: 331px;
 }
+
 .address-page :not(:last-child) {
   margin-right: 50px;
 }
@@ -123,7 +124,9 @@
   margin-top: 50px;
 }
 .description-team {
-  padding: 30px 68px;
+  width: 270px;
+  height: 108px;
+  padding: 30px 0px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -131,6 +134,7 @@
 .description-team .team-name {
   margin-bottom: 10px;
 }
+
 /*секции на страничке portfolio */
 .portfolio {
   padding-top: 94px;
