--- a/css/common.css
+++ b/css/common.css
@@ -17,7 +17,6 @@
   padding: 32px 0px;
 }
 .site-nav {
-  display: flex;
   align-items: center;
   margin-left: 93px;
 }
@@ -27,7 +26,7 @@
 }
 .address-page {
   display: flex;
-  margin-left: 331px;
+  margin-left: auto;
 }
 
 .address-page :not(:last-child) {
